<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_Message">welcome To Shoe App</string>

    <string name="introduction_message">shoe store application sell and buy for free </string>
    <string name="continue_message">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_shoe_store">Welcome To Shoe Store</string>
    <string name="instruction_message">shoe store is application where you can buy or sell shoes</string>
    <string name="done">Done</string>
    <string name="shoes_name">Shoes Name</string>
    <string name="input_description">Input Description</string>
    <string name="input_company">Input Company</string>
    <string name="input_size">Input Size</string>
    <string name="add">Add</string>
</resources>
