<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="@string/welcome_Message"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/introduction_message"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/text1"
            app:layout_constraintStart_toStartOf="@+id/text1"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="88dp"
            android:layout_height="55dp"
            android:layout_marginTop="200dp"
            android:text="@string/continue_message"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/text1"
            app:layout_constraintStart_toStartOf="@+id/text1"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>