<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.fragments.LoginFragment">

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSignIn" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/inputEmail"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmail" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="88dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="88dp"
            android:layout_height="55dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnSignIn"
            app:layout_constraintEnd_toStartOf="@+id/btnSignIn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
